--- a/Kellogg's Special K-Original/Cube.html
+++ b/Kellogg's Special K-Original/Cube.html
@@ -666,21 +666,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 72px; height: 27px;
-        -ms-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 36px;
+        -ms-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
 #i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(2px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i190.image.css:image/base/css*/
 #i190 { opacity: 1; }
@@ -725,10 +725,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 279px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(-2px, 93px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-2px, 93px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-2px, 93px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-2px, 93px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-4px, 93px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-4px, 93px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-4px, 93px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-4px, 93px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -739,6 +739,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i5.i370.image.css:image/base/css*/
+#i370 { opacity: 1; }
+/*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
+#i370 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 36px;
+        -ms-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+}
 /*#/#*//*#i5.i338.image.css:image/base/css*/
 #i338 { opacity: 1; }
 /*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
@@ -747,15 +756,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-}
-/*#/#*//*#i5.i340.image.css:image/base/css*/
-#i340 { opacity: 1; }
-/*#/#*//*#i340.i341.positioning.css:positioning/base/css.2*/
-#i340 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 72px; height: 27px;
-        -ms-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -833,14 +833,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
 }
-/*#/#*//*#i6.i356.image.css:image/base/css*/
-#i356 { opacity: 1; }
-/*#/#*//*#i356.i357.positioning.css:positioning/base/css.2*/
-#i356 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 72px; height: 27px;
-        -ms-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 219px) rotate(0deg);
+/*#/#*//*#i6.i372.image.css:image/base/css*/
+#i372 { opacity: 1; }
+/*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
+#i372 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 36px;
+        -ms-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -918,7 +918,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i286.image.html:image/html-->
 <img id="i286" src="https://i.imgur.com/aeKExXC.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/NrErr3r.png"/>
+<img id="i181" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -937,10 +937,10 @@ url('fonts/') format('svg');
 <div id="i24">Dale sabor a este gran día con las opciones nutritivas que Special K® tiene para ti.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/j9bruEl.jpg"/>
+<!--#/#--><!--#i5.i370.image.html:image/html-->
+<img id="i370" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/aeKExXC.png"/>
-<!--#/#--><!--#i5.i340.image.html:image/html-->
-<img id="i340" src="https://i.imgur.com/NrErr3r.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i342.image.html:image/html-->
@@ -962,8 +962,8 @@ url('fonts/') format('svg');
 <img id="i60" src="https://i.imgur.com/JvvnLh2.gif"/>
 <!--#/#--><!--#i6.i354.image.html:image/html-->
 <img id="i354" src="https://i.imgur.com/aeKExXC.png"/>
-<!--#/#--><!--#i6.i356.image.html:image/html-->
-<img id="i356" src="https://i.imgur.com/NrErr3r.png"/>
+<!--#/#--><!--#i6.i372.image.html:image/html-->
+<img id="i372" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i358.image.html:image/html-->
@@ -1062,7 +1062,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.specialk.com.mx/mx/#'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1093,6 +1093,14 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
+/*#/#*//*#i5.i370.image.js:image/base/js*/
+
+/*#/#*//*#i370.i371.positioning.js:positioning/base/js.2*/
+bmShow('i370');
+/*#/#*//*#i5.i338.image.js:image/base/js*/
+
+/*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
+bmShow('i338');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -1106,14 +1114,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i5.i338.image.js:image/base/js*/
-
-/*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
-bmShow('i338');
-/*#/#*//*#i5.i340.image.js:image/base/js*/
-
-/*#/#*//*#i340.i341.positioning.js:positioning/base/js.2*/
-bmShow('i340');
 /*#/#*//*#i5.i342.image.js:image/base/js*/
 
 /*#/#*//*#i342.i343.positioning.js:positioning/base/js.2*/
@@ -1141,7 +1141,7 @@ var el = document.getElementById('i346');
 
 el.addEventListener('click', function(e){
     /*#i348.i349.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.specialk.com.mx/mx/#'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1172,6 +1172,14 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i354.image.js:image/base/js*/
+
+/*#/#*//*#i354.i355.positioning.js:positioning/base/js.2*/
+bmShow('i354');
+/*#/#*//*#i6.i372.image.js:image/base/js*/
+
+/*#/#*//*#i372.i373.positioning.js:positioning/base/js.2*/
+bmShow('i372');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1185,14 +1193,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i354.image.js:image/base/js*/
-
-/*#/#*//*#i354.i355.positioning.js:positioning/base/js.2*/
-bmShow('i354');
-/*#/#*//*#i6.i356.image.js:image/base/js*/
-
-/*#/#*//*#i356.i357.positioning.js:positioning/base/js.2*/
-bmShow('i356');
 /*#/#*//*#i6.i358.image.js:image/base/js*/
 
 /*#/#*//*#i358.i359.positioning.js:positioning/base/js.2*/
@@ -1220,7 +1220,7 @@ var el = document.getElementById('i362');
 
 el.addEventListener('click', function(e){
     /*#i364.i365.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.specialk.com.mx/mx/#'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1333,15 +1333,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i370.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i338.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i338.i339.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i340.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i340.i341.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1382,10 +1382,10 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i354.i355.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i356.image.meta:image/meta*/
+/*#/#*//*#i6.i372.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i356.i357.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i372.i373.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
