--- a/Kellogg's Special K-Original/Venetian.html
+++ b/Kellogg's Special K-Original/Venetian.html
@@ -2161,11 +2161,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 98px; height: 37px;
-        -ms-transform: translate(0, 0) translate(217px, 440px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(217px, 440px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(217px, 440px) rotate(0deg);
-        transform: translate(0, 0) translate(217px, 440px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 47px; height: 48px;
+        -ms-transform: translate(0, 0) translate(269px, 428px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(269px, 428px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(269px, 428px) rotate(0deg);
+        transform: translate(0, 0) translate(269px, 428px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2234,23 +2234,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
         transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
 }
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 308px; height: 45px;
-        -ms-transform: translate(0, 0) translate(6px, 360px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 360px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 360px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 360px) rotate(0deg);
-}
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 50px;
-        -ms-transform: translate(0, 0) translate(28px, 402px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 402px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 402px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 402px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 86px;
+        -ms-transform: translate(0, 0) translate(10px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(10px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(10px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(10px, 366px) rotate(0deg);
 }
 /*#/#*//*#i79.shape.css:shape/base/css*/
 #i79 { background-color: #dedede; opacity: 0.00;
@@ -2300,7 +2291,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/A5lc2KC.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/7EDp2OH.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/vkGZrEa.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2308,14 +2299,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/NrErr3r.png"/>
+<img id="i16" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/aeKExXC.png"/>
-<!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Dile adiós al estrés de una
-larga semana.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Desconéctate de la rutina con Special K® Fortaleza. #AlimentamosTodoLoQueEres</div>
+<div id="i68">Dile adiós al estrés de una
+larga semana. Desconéctate de la rutina con Special K® Fortaleza. #AlimentamosTodoLoQueEres</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i89.image.html:image/html-->
@@ -2397,8 +2386,6 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
-bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
@@ -2493,7 +2480,7 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: A5lc2KC.gif; fileId: ; sourceTypeId: externalUrl;
+name: 7EDp2OH.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: vkGZrEa.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
@@ -2510,12 +2497,8 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i63.text.meta:text/meta*/
-name: Dile adiós al estrés de una larga semana.; customName: false;
-/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Desconéctate de la rutina con Special K® Fortaleza. #AlimentamosTodoLoQueEres; customName: false;
+name: Dile adiós al estrés de una larga semana. Desconéctate de la rutina con Special K® Fortaleza. #AlimentamosTodoLoQueEres; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i79.shape.meta:shape/meta*/
