--- a/Kellogg's Special K-Original/Cube.html
+++ b/Kellogg's Special K-Original/Cube.html
@@ -657,11 +657,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 147px; height: 40px;
-        -ms-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 41px;
+        -ms-transform: translate(0, 0) translate(77px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 145px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -739,6 +739,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i5.i378.image.css:image/base/css*/
+#i378 { opacity: 1; }
+/*#/#*//*#i378.i379.positioning.css:positioning/base/css.2*/
+#i378 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 41px;
+        -ms-transform: translate(0, 0) translate(75px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(75px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(75px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(75px, 145px) rotate(0deg);
+}
 /*#/#*//*#i5.i370.image.css:image/base/css*/
 #i370 { opacity: 1; }
 /*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
@@ -747,15 +756,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
         transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
-}
-/*#/#*//*#i5.i338.image.css:image/base/css*/
-#i338 { opacity: 1; }
-/*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
-#i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 147px; height: 40px;
-        -ms-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -824,15 +824,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i354.image.css:image/base/css*/
-#i354 { opacity: 1; }
-/*#/#*//*#i354.i355.positioning.css:positioning/base/css.2*/
-#i354 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 147px; height: 40px;
-        -ms-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
-}
 /*#/#*//*#i6.i372.image.css:image/base/css*/
 #i372 { opacity: 1; }
 /*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
@@ -841,6 +832,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
         transform: translate(0, 0) translate(260px, 210px) rotate(0deg);
+}
+/*#/#*//*#i6.i380.image.css:image/base/css*/
+#i380 { opacity: 1; }
+/*#/#*//*#i380.i381.positioning.css:positioning/base/css.2*/
+#i380 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 41px;
+        -ms-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(76px, 145px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -916,7 +916,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/YXGrHmO.gif"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/aeKExXC.png"/>
+<img id="i286" src="https://i.imgur.com/JB0Mzar.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -937,10 +937,10 @@ url('fonts/') format('svg');
 <div id="i24">Dale sabor a este gran día con las opciones nutritivas que Special K® tiene para ti.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/j9bruEl.jpg"/>
+<!--#/#--><!--#i5.i378.image.html:image/html-->
+<img id="i378" src="https://i.imgur.com/JB0Mzar.png"/>
 <!--#/#--><!--#i5.i370.image.html:image/html-->
 <img id="i370" src="https://i.imgur.com/SRyFQ95.png"/>
-<!--#/#--><!--#i5.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/aeKExXC.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i342.image.html:image/html-->
@@ -960,10 +960,10 @@ url('fonts/') format('svg');
 #AlimentamosTodoLoQueEres</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/JvvnLh2.gif"/>
-<!--#/#--><!--#i6.i354.image.html:image/html-->
-<img id="i354" src="https://i.imgur.com/aeKExXC.png"/>
 <!--#/#--><!--#i6.i372.image.html:image/html-->
 <img id="i372" src="https://i.imgur.com/SRyFQ95.png"/>
+<!--#/#--><!--#i6.i380.image.html:image/html-->
+<img id="i380" src="https://i.imgur.com/JB0Mzar.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i358.image.html:image/html-->
@@ -1093,14 +1093,14 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
+/*#/#*//*#i5.i378.image.js:image/base/js*/
+
+/*#/#*//*#i378.i379.positioning.js:positioning/base/js.2*/
+bmShow('i378');
 /*#/#*//*#i5.i370.image.js:image/base/js*/
 
 /*#/#*//*#i370.i371.positioning.js:positioning/base/js.2*/
 bmShow('i370');
-/*#/#*//*#i5.i338.image.js:image/base/js*/
-
-/*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
-bmShow('i338');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -1172,14 +1172,14 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i354.image.js:image/base/js*/
-
-/*#/#*//*#i354.i355.positioning.js:positioning/base/js.2*/
-bmShow('i354');
 /*#/#*//*#i6.i372.image.js:image/base/js*/
 
 /*#/#*//*#i372.i373.positioning.js:positioning/base/js.2*/
 bmShow('i372');
+/*#/#*//*#i6.i380.image.js:image/base/js*/
+
+/*#/#*//*#i380.i381.positioning.js:positioning/base/js.2*/
+bmShow('i380');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1333,15 +1333,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i378.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i378.i379.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i370.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i338.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i338.i339.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1377,15 +1377,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i354.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i354.i355.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i372.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i372.i373.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i380.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i380.i381.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
