--- a/Kellogg's Special K-Original/Venetian.html
+++ b/Kellogg's Special K-Original/Venetian.html
@@ -2228,11 +2228,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 179px; height: 48px;
-        -ms-transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 311px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 185px; height: 49px;
+        -ms-transform: translate(0, 0) translate(67px, 313px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 313px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 313px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 313px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2301,7 +2301,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/SRyFQ95.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/aeKExXC.png"/>
+<img id="i46" src="https://i.imgur.com/JB0Mzar.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">Dile adiós al estrés de una
 larga semana. Desconéctate de la rutina con Special K® Fortaleza. #AlimentamosTodoLoQueEres</div>
