--- a/Kellogg's Special K-Original/Fade_300x600.html
+++ b/Kellogg's Special K-Original/Fade_300x600.html
@@ -341,7 +341,7 @@
 <body class="tgx">
     <a href="https://www.specialk.com.mx/mx/#" target="_blank">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
-        <div class="cta"><img src="https://i.imgur.com/aeKExXC.png" style="height: 45px;"></div>
+        <div class="cta"><img src="https://i.imgur.com/JB0Mzar.png" style="height: 45px;"></div>
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
