cambio de color

--- a/Coninsa/formulario-def.html
+++ b/Coninsa/formulario-def.html
@@ -88,7 +88,7 @@
     
     .card .red {
         width: 100%;
-        background: #fff;
+        background: #fff7ed;
         top: 0;
         left: 100%;
         z-index: 5;
