--- a/HUAWEI_Juegapormexico/Cube.html
+++ b/HUAWEI_Juegapormexico/Cube.html
@@ -938,7 +938,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">HUAWEI</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/PpQb5uk.jpg"/>
+<img id="i60" src="https://i.imgur.com/p9e7ada.jpg"/>
 <!--#/#--><!--#i6.i352.image.html:image/html-->
 <img id="i352" src="https://i.imgur.com/Hk0NnME.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1035,7 +1035,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://consumer.huawei.com/mx/campaign/huaweiselajuega/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1110,7 +1110,7 @@ var el = document.getElementById('i344');
 
 el.addEventListener('click', function(e){
     /*#i346.i347.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://consumer.huawei.com/mx/campaign/huaweiselajuega/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1185,7 +1185,7 @@ var el = document.getElementById('i358');
 
 el.addEventListener('click', function(e){
     /*#i360.i361.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://consumer.huawei.com/mx/campaign/huaweiselajuega/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
