--- a/HUAWEI_Juegapormexico/FadeBig.html
+++ b/HUAWEI_Juegapormexico/FadeBig.html
@@ -370,7 +370,7 @@
         </div>
         <div class="tgx_text"> 
            <span class="tgx_text_title tgx_text_bold">
-              Si la <b>SELECCIÓN NACIONAL DE MÉXICO®</b> gana el campeonato, <b>HUAWEI</b> te reembolsa el total de tu compra!
+              Si la <b>SELECCIÓN NACIONAL DE MÉXICO®</b> gana el campeonato, <b>HUAWEI</b> ¡te reembolsa el total de tu compra!
             </span>
             <br/>  
             
