--- a/HUAWEI_Juegapormexico/ZoomExp300x600.html
+++ b/HUAWEI_Juegapormexico/ZoomExp300x600.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">Si la <b>SELECCIÓN NACIONAL DE MÉXICO®</b> gana el campeonato, <b>HUAWEI</b> te reembolsa el total de tu compra!.</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">Si la <b>SELECCIÓN NACIONAL DE MÉXICO®</b> gana el campeonato, <b>HUAWEI</b> ¡te reembolsa el total de tu compra!</span>
 
                    
                    </div>
